# ovCompose-multiplatform-core

./: .gitignore  DEVELOPMENT.md  License_ovCompose-multiplatform-core.txt  MULTIPLATFORM.md  README.md  README_TENCENT.md  README_ovCompose_en.md  README_ovCompose_zh.md  build.gradle  check_ci.txt  gradle.properties  gradlew.bat  include-composite-deps.gradle  libraryversions.toml  mergeAOSP.sh  mergeEmpty.sh  settings.gradle  snapSubfolder.sh  temp.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cfw.yml  check-release-notes.yml  integration_tests.yml  ios-pr.yml  jbpresubmit.yml  presubmit.yml  prune_artifacts.yml  register_workflow_start.yml  scorecards.yml  update_prebuilts.yml
.run/desktop/: demo.Example1.run.xml  demo.ImageViewer.run.xml  test.run.xml
buildSrc/: build.gradle  repos.gradle  settings.gradle
buildSrc-tests/: build.gradle
compose/: gradle.properties
compose/ui/ui-arkui/src/ohosArm64Main/cpp/compose/src/main/cpp/: CMakeLists.txt  napi_init.cpp
compose/ui/ui-arkui/src/ohosArm64Main/cpp/compose/src/main/cpp/compose/: arkui_utils_export.cpp  arkui_utils_export.h  arkui_view_controller.cpp  arkui_view_controller.h  arkui_view_controller_wrapper.cpp  arkui_view_controller_wrapper.h  xcomponent_common.h  xcomponent_constant.h  xcomponent_holder.cpp  xcomponent_holder.h  xcomponent_log.h  xcomponent_render.cpp  xcomponent_render.h  xcomponent_utils.cpp  xcomponent_utils.h
compose/ui/ui-arkui/src/ohosArm64Main/cpp/compose/src/main/cpp/include/: libkn_api.h
compose/ui/ui-arkui/src/ohosArm64Main/cpp/compose/src/main/cpp/types/libcompose_arkui_utils/: Index.d.ts  oh-package.json5
docs-tip-of-tree/: build.gradle
gradle/: libs.versions.toml
lifecycle/: gradle.properties
mpp/: build.gradle.kts
navigation/: gradle.properties
performance/: gradle.properties
prebuilts/: .gitignore  download-android-sdk.sh
savedstate/: gradle.properties
scripts/: convertCrowdinToStringsXml.sh  mergeAOSP.sh  pushAndroidxTags.main.kts  pushJetpackComposeTags.main.kts
window/: gradle.properties
(+4262 files in other folders)
